# gnome-keyring

daemon/ssh-agent/: Makefile.am  gkd-ssh-agent-ops.c  gkd-ssh-agent-private.h  gkd-ssh-agent-proto.c  test-communication.c  test-keytypes.c
egg/: pk.asn  pk.asn.h
pkcs11/: pkcs11i.h
pkcs11/gkm/: Makefile.am  gkm-attributes.c  gkm-crypto.c  gkm-crypto.h  gkm-data-asn1.c  gkm-data-asn1.h  gkm-data-der.c  gkm-data-der.h  gkm-ecdsa-mechanism.c  gkm-eddsa-mechanism.c  gkm-eddsa-mechanism.h  gkm-private-xsa-key.c  gkm-private-xsa-key.h  gkm-public-xsa-key.c  gkm-public-xsa-key.h  gkm-sexp-key.c  gkm-sexp-key.h  gkm-sexp.c  gkm-sexp.h  test-data-asn1.c  test-sexp.c  test.asn  test.asn.h
pkcs11/ssh-store/: gkm-ssh-openssh.c  test-ssh-openssh.c
